[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nowonbun-orchestration-ai-mcp"
version = "0.1.0"
description = "Claude/Codex CLI orchestration MCP server with SQLite-backed session memory and SSE streaming"
requires-python = ">=3.13"
dependencies = [
  "mcp[cli]>=1.26,<2"
]
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
keywords = ["mcp", "claude", "codex", "sqlite", "sse", "orchestration"]

[project.scripts]
nowonbun-orchestration-ai-mcp = "server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
